# RAG_Agent_Test

./: CLAUDE.md  Dockerfile  LICENSE  README.md  benchmark_raw_stuffing_20260407_173746.csv  docker-compose.yml  pyproject.toml  pyrightconfig.json  stage4_final_comparison_0408_1640.csv
.claude/: settings.local.json
configs/: config.yaml
configs/prompt/: compress_summarize.yaml  few_shot.yaml  few_shot_envelope.yaml  labeled_context.yaml  raw_stuffing.yaml  structured_context.yaml
configs/query_representation/: core_focus_query.yaml  polarity_aware_qpc.yaml  question_only.yaml  question_plus_choices.yaml
configs/retrieval/: hybrid.yaml  mmr.yaml  rerank_base.yaml  rerank_bm25aux.yaml  rerank_polarity.yaml  rerank_polarity_bm25aux.yaml  rerank_polarity_bm25aux_f3.yaml  rerank_stage7_total.yaml  rerank_template.yaml  score_threshold.yaml  top_k.yaml  top_k_category_filter.yaml
configs/serialization/: dual.yaml  kv_pairs.yaml  kv_pairs_no_category.yaml  narrative.yaml  raw.yaml  synthetic.yaml  weighted.yaml
docs/: 260406_01_최초문제이해.md  260406_02_데이터구조파악.md  260406_03_청킹과임베딩고민.md  260407_01_유사도검색고민.md  260407_02_프롬프트고민.md  260407_03_1차실험.md  260407_04_2차실험.md  260408_01_3차실험.md  260408_02_4차실험.md  260408_03_5차실험.md  260408_04_6차실험.md  260409_01_7차실험.md  260409_02_최후8차실험.md  260409_03_실험종합분석.md
scratch/: test_parsing.py
src/: __init__.py  main.py
test/: benchmark.py  final_eval.py  inference_test.py  oaat_sweep.py  stage2_sweep.py  stage3_sweep.py  stage4_clean_confirmation.py  stage5_sweep.py  stage6_sweep.py  stage7_sweep.py  sweep_utils.py  test_refactor.py
(+520 files in other folders)
